@@ -1,3 +1,6 @@
+Upcoming:
+- Safety fix for the builder so that it will no longer crash on blocks that do weird things (like the banner). Mining a banner caused a crash on servers
+
 1.16-3.0.8:
 - The shield projector is now infusable again
 - When the shield projector is upgraded it will keep the current settings
